tests/snapshots/blockflow/hashes/bad_param.snap
---
source: tests/common/perform_cmd.rs
assertion_line: 38
info:
  program: kermit
  args:
    - blockflow
    - hashes
    - foo
    - "1"
    - "0"
---
success: false
exit_code: 2
----- stdout -----

----- stderr -----
error: invalid value 'foo' for '<FROM_GROUP>': invalid digit found in string

For more information, try '--help'.
