tests/snapshots/blockflow/hashes/no_params.snap
---
source: tests/common/perform_cmd.rs
assertion_line: 45
info:
  program: kermit
  args:
    - blockflow
    - hashes
---
success: false
exit_code: 2
----- stdout -----

----- stderr -----
error: the following required arguments were not provided:
  <FROM_GROUP>
  <TO_GROUP>
  <HEIGHT>

Usage: kermit blockflow hashes <FROM_GROUP> <TO_GROUP> <HEIGHT>

For more information, try '--help'.
