tests/snapshots/blockflow/hashes/two_params.snap
---
source: tests/common/perform_cmd.rs
assertion_line: 45
info:
  program: kermit
  args:
    - blockflow
    - hashes
    - "1"
    - "1"
---
success: false
exit_code: 2
----- stdout -----

----- stderr -----
error: the following required arguments were not provided:
  <HEIGHT>

Usage: kermit blockflow hashes <FROM_GROUP> <TO_GROUP> <HEIGHT>

For more information, try '--help'.
